Fix background issue on iOS

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,40 @@
 /* You can add global styles to this file, and also import other style files */
 
 body {
-  background-image: url('./img/background.jpg');
+  /*background-image: url('./img/background.jpg');
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-  height: 100vh;
+  height: 100vh;*/
   color: #e0e0e0;
 }
+
+#background_wrap {
+  z-index: -1;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-size: cover;
+  background-image: url('./img/background.jpg');
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center;
+}
+
+
+/*
+#background_wrap {
+  z-index: -1;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-size: cover;
+  background-image: url('./img/background.jpg');
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+}
+*/
